--- a/shoeshop/pom.xml
+++ b/shoeshop/pom.xml
@@ -21,14 +21,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 		  <groupId>org.springframework.security</groupId>
 		  <artifactId>spring-security-web</artifactId>
 		</dependency>
 		<dependency>
 		  <groupId>org.springframework.security</groupId>
 		  <artifactId>spring-security-config</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
